  specify a revision in a module's dependency list.
- Add a main-parameter to source definitions, specifying a module's main
  development branch.
- Implement revision-overrides by file-glob style patterns. This allows
  specifying a fixed revision or the use of a module's development branch.
- Implement revision-overrides by --revision option on the command line.

** Bugfixes

- Process --query at a time where more information is established.

** Miscellaneous

- Removed a couple of obsolete zephyr modules: zephyr-hal-qmsi,
  zephyr-hal-unisoc and zephyr-mcumgr.

** Diffstat:

    ROADMAP.org              | 251 +++++++++++++++++++++++++++++++++++----
    _makemehappy             |   4 +-
    data/sources.yaml        |  37 +++++-
    makemehappy/cut.py       |  92 +++++++++++++-
    makemehappy/utilities.py |   7 ++
    makemehappy/yamlstack.py | 187 +++++++++++++++++++----------
    makemehappy/zephyr.py    |  37 ++++++
    mmh.in                   | 122 +++++++++++++------
    8 files changed, 602 insertions(+), 135 deletions(-)


* v0.14 → v0.15 (released 2022-12-19):

** New Features

- source: New zephyr-scilib module

** Bugfixes

- download-source: Use module name as destination for clone.
- fetch-dependencies: Error out if setting up a dependency fails.
- Fix component installation feature in module-builds.
- Error out if an unknown zephyr module is specified.

** Diffstat:

    data/sources.yaml     |  2 ++
    makemehappy/build.py  |  5 ++---
    makemehappy/cmake.py  | 11 +++++++++++
    makemehappy/cut.py    | 19 ++++++++++++++++---
    makemehappy/zephyr.py |  2 +-
    mmh.in                |  2 +-
    6 files changed, 33 insertions(+), 8 deletions(-)


* v0.13 → v0.14 (released 2022-11-02):

** New Features

- Allow selecting CMake components for installation. The ‘install’ key can be
  either ‘true’ or ‘false’ to enable/disable installation; when it is another
  string or a list of strings, mmh will trigger the names CMake components.